[FEAT] #23 결과 기록 데이터 재 정렬